[workspace]
members=[
  "candy-core/program"
]
exclude = [
  "fixed-price-sale/cli",
  "token-metadata",
  "auction-house/program",
  "hydra/program",
  "candy-machine/program",
  "bubblegum/program",
  "candy-wrapper/program",
  "token-entangler/program",
  "nft-packs/program",
  "fixed-price-sale/program"
]
