[workspace]
members=[
  "token-entangler/program",
  "nft-packs/program",
  "fixed-price-sale/program"
]
exclude = [
  "fixed-price-sale/cli",
  "token-metadata",
  "auction-house/program",
  "hydra/program",
  "candy-machine/program",
  "candy-machine/state",
  "bubblegum/program",
  "candy-wrapper/program",
]
