[workspace]
members = [
  "token-entangler/program",
  "nft-packs/program",
  "fixed-price-sale/program",
]
exclude = [
  "fixed-price-sale/cli",
  "token-metadata",
  "auction-house/program",
  "auction-house/sdk",
  "candy-machine/program",
  "reward-center/program",
  "reward-center/sdk",
  "bubblegum/program",
  "candy-wrapper/program"
]
