[workspace]
[package]
name = "mpl-auction-house"
version = "1.2.4"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.10.25"
anchor-lang = "~0.25"
anchor-spl = "~0.25"
spl-token = { version = "~3.3",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.5", features = ["no-entrypoint"]}
mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
thiserror = "~1.0"
arrayref = "~0.3.6"

[dev-dependencies]
anchor-client = "~0.25"
shellexpand = "~2.1.0"
serde_json = "~1.0"
solana-program = "~1.10.25"
mpl-testing-utils= {path="../../core/rust/testing-utils" }
solana-program-test = "~1.10.25"
solana-sdk = "~1.10.25"
env_logger="~0.9.0"
