[workspace]
[package]
name = "mpl-auction-house"
version = "1.3.5"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10"
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = { version = "3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.4", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anchor-client = "0.25.0"
shellexpand = "2.1.0"
serde_json = "1.0"
solana-program = "1.10"
mpl-testing-utils= { path="../../core/rust/testing-utils" }
solana-program-test = "1.10"
solana-sdk = "1.10"
env_logger="0.9.0"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
