[workspace]
[package]
name = "mpl-auction-house"
version = "1.4.0"
edition = "2021"
description = "Decentralized Sales Protocol for Solana Tokens"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.14"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.9.0", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anchor-client = "0.26.0"
rmp-serde = "1.1.1"
shellexpand = "2.1.2"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0"
solana-program = "1.14"
mpl-testing-utils= { path="../../core/rust/testing-utils" }
solana-program-test = "1.14"
solana-sdk = "1.14"
env_logger="0.9.3"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
strip = true
opt-level = "z"
lto = true
codegen-units = 1
