[workspace]
[package]
name = "mpl-auctioneer"
version = "0.1.0"
edition = "2021"
description = "Default Auctioneer implementation"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.9.15"
anchor-lang = "~0.24.2"
anchor-spl = "~0.24.2"
mpl-auction-house = { path = "../../auction-house/program", features = ["cpi", "no-entrypoint"]}