[workspace]
[package]
name = "mpl-auctioneer"
version = "0.2.1"
edition = "2021"
description = "Default Auctioneer implementation"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.14"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mpl-auction-house = { path = "../../auction-house/program", version = "1.3.1", features = ["cpi", "no-entrypoint"]}

[dev-dependencies]
anchor-client = "0.26.0"
shellexpand = "2.1.2"
serde_json = "1.0"
solana-program = "1.14"
mpl-testing-utils= {path="../../core/rust/testing-utils", version="0.1.1"}
solana-program-test = "1.14"
solana-sdk = "1.14"
env_logger="0.9.3"
spl-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.7", features = [ "no-entrypoint" ] }
spl-token = { version = "3.5",  features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
