[package]
name = "mpl-bubblegum"
version = "0.6.0"
description = "NFT Compression"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
bytemuck = "1.8.0"
mpl-token-metadata = { path = "../../token-metadata/program", version = "1.5.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
spl-account-compression = { git = "https://github.com/ChewingGlass/solana-program-library", branch = "feature/anchor-26", version="0.1.5", features = ["cpi"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
spl-token = { version = "3.3.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.13.5"
solana-sdk = "1.13.5"
spl-concurrent-merkle-tree = "0.1.1"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.2", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
