[package]
name = "mpl-candy-machine-core"
version = "0.0.1"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
arrayref = "0.3.6"
mpl-token-metadata = { version = "1.3.4", features = ["no-entrypoint"] }
solana-program = "1.10.29"
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
