[package]
name = "mpl-candy-machine-core"
version = "0.2.0"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.25.0"}
arrayref = "0.3.6"
mpl-token-metadata = { version = "1.7.0", path="../../token-metadata/program", features = ["no-entrypoint"] }
solana-program = "1"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
mpl-utils = { version = "0.0.5" }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.

[patch.crates-io]
anchor-lang = { git="https://github.com/metaplex-foundation/anchor" }