[package]
name = "mpl-candy-machine-core"
version = "1.0.0"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
arrayref = "0.3.6"
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
solana-program = "~1.14.14"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
