[package]
name = "mpl_fixed_price_sale_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = [ "derive" ] }
solana-sdk = "1.9.5"
solana-client = "1.9.5"
mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version = "1.1.0" }
borsh = "0.9.1"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
anchor-lang = "0.20.1"
chrono = "0.4.19"