[package]
name = "mpl-fixed-price-sale-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = [ "derive" ] }
solana-sdk = "1.10.25"
solana-client = "1.10.25"
mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
borsh = "0.9.1"
spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
anchor-lang = "~0.25"
chrono = "0.4.19"
spl-associated-token-account = "1.0.5"
serde_json = "1.0.79"