[package]
name = "mpl-fixed-price-sale"
version = "0.2.3"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fixed_price_sale"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="~0.24.2", features=["init-if-needed"]}
anchor-spl = {version="~0.24.2"}
spl-token = "~3.2.0"
mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.2.10" }

[dev-dependencies]
anchor-client = "~0.24.2"
solana-program-test = "~1.9.28"
solana-program = "~1.9.28"
solana-sdk = "~1.9.28"
spl-associated-token-account = "~1.0.3"
