[package]
name = "fusion"
version = "0.1.0"
description = "Created with <3 for Metaplex"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "fusion"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"] }
