[workspace]
[package]
name = "mpl_gumdrop"
version = "0.1.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
keywords = ["solana", "merkle", "distributor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gumdrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.18"
spl-token = "3.2.0"
spl-associated-token-account = { version = "=1.0.3", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="=1.2.7", features = [ "no-entrypoint" ] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
