[workspace]
[package]
name = "mpl_gumdrop"
version = "0.1.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
keywords = ["solana", "merkle", "distributor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gumdrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.13"
spl-token = "3.5.0"
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="=1.7.0", features = [ "no-entrypoint" ] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
