[package]
name = "mpl-hydra"
version = "0.4.2"
edition = "2021"
description = "Collective account pooling, fan out wallet, dao treasury, all of the things you need to FAN OUT"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-zk-token-sdk = "1.18.14"
spl-token = {version="4.0.1", features = [ "no-entrypoint" ]}
mpl-token-metadata = {version="4.1.2"}

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
