[package]
name = "mpl_membership_token_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = [ "derive" ] }
solana-sdk = "1.9.4"
solana-client = "1.9.4"
mpl-membership-token = { path = "../program", features = [ "no-entrypoint" ] }
borsh = "0.9.1"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }