[package]
name = "mpl-metaplex"
version = "0.0.3"
description = "Metaplex"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
mpl-auction = {path = "../../auction/program", features = ["no-entrypoint"]}
num-derive = "~0.3"
num-traits = "~0.2"
arrayref = "~0.3.6"
solana-program = "~1.10.25"
spl-token = {version = "~3.3.0", features = ["no-entrypoint"]}
mpl-token-vault = {path = "../../token-vault/program", features = ["no-entrypoint"]}
mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
thiserror = "~1.0"
borsh = "~0.9.1"
spl-associated-token-account = "1.0.5"

[dev-dependencies]
solana-program-test = "~1.10.25"
solana-sdk = "~1.10.25"

[lib]
crate-type = ["cdylib", "lib"]
