[package]
name = "nft-candy-machine"
version = "2.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_candy_machine"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
arrayref = "0.3.6"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
anchor-spl = "0.19.0"
solana-program = "1.8.9"
solana-gateway = { git = "https://github.com/identity-com/on-chain-identity-gateway", rev = "2d195dcd33bcd1a26b09d79ee90cc6f7282c87aa" }